SDKs/neutrinoapi.net/3.5.0/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            builder.setSecurity(
                new Security() {{
                    apiKey = new SchemeApiKey() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                    userId = new SchemeUserId() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                }}
            );

            SDK sdk = builder.build();

            BadWordFilterRequest req = new BadWordFilterRequest() {{
                request = new BadWordFilterRequestBody() {{
                    catalog = "minima";
                    censorCharacter = "non";
                    content = "voluptatum";
                    outputCase = "camel";
                }};
            }};

            BadWordFilterResponse res = sdk.dataTools.badWordFilter(req);

            if (res.badWordFilterResponse.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Data Tools

* `badWordFilter` - Bad Word Filter
* `emailValidate` - Email Validate
* `phoneValidate` - Phone Validate
* `userAgentInfo` - User Agent Info

### E-commerce

* `binListDownload` - BIN List Download
* `binLookup` - BIN Lookup
* `convert` - Convert

### Geolocation

* `geocodeAddress` - Geocode Address
* `geocodeReverse` - Geocode Reverse
* `ipInfo` - IP Info

### Imaging

* `html5Render` - HTML5 Render
* `imageResize` - Image Resize
* `imageWatermark` - Image Watermark
* `qrCode` - QR Code

### Security and Networking

* `emailVerify` - Email Verify
* `hostReputation` - Host Reputation
* `ipBlocklist` - IP Blocklist
* `ipBlocklistDownload` - IP Blocklist Download
* `ipProbe` - IP Probe

### Telephony

* `hlrLookup` - HLR Lookup
* `phonePlayback` - Phone Playback
* `phoneVerify` - Phone Verify
* `smsMessage` - SMS Message
* `smsVerify` - SMS Verify
* `verifySecurityCode` - Verify Security Code

### WWW

* `browserBot` - Browser Bot
* `htmlClean` - HTML Clean
* `urlInfo` - URL Info

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
