SDKs/neutrinoapi.net/3.6.3/java/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'org.openapis.openapi:openapi:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import org.openapis.openapi.SDK;
import org.openapis.openapi.models.shared.Security;
import org.openapis.openapi.models.operations.BadWordFilterRequestBody;
import org.openapis.openapi.models.operations.BadWordFilterRequest;
import org.openapis.openapi.models.operations.BadWordFilterResponse;

public class Application {
    public static void main(String[] args) {
        try {
            SDK sdk = SDK.builder()
                .setSecurity(new Security() {{
                    apiKey = new SchemeAPIKey() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                    userId = new SchemeUserID() {{
                        apiKey = "YOUR_API_KEY_HERE";
                    }};
                }})
                .build();

            BadWordFilterRequest req = new BadWordFilterRequest() {{
                request = new BadWordFilterRequestBody() {{
                    catalog = "corrupti";
                    censorCharacter = "provident";
                    content = "distinctio";
                }};
            }};            

            BadWordFilterResponse res = sdk.dataTools.badWordFilter(req);

            if (res.badWordFilterResponse.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### dataTools

* `badWordFilter` - Bad Word Filter
* `emailValidate` - Email Validate
* `phoneValidate` - Phone Validate
* `uaLookup` - UA Lookup

### eCommerce

* `binListDownload` - BIN List Download
* `binLookup` - BIN Lookup
* `convert` - Convert

### geolocation

* `geocodeAddress` - Geocode Address
* `geocodeReverse` - Geocode Reverse
* `ipInfo` - IP Info

### imaging

* `htmlRender` - HTML Render
* `imageResize` - Image Resize
* `imageWatermark` - Image Watermark
* `qrCode` - QR Code

### securityAndNetworking

* `emailVerify` - Email Verify
* `hostReputation` - Host Reputation
* `ipBlocklist` - IP Blocklist
* `ipBlocklistDownload` - IP Blocklist Download
* `ipProbe` - IP Probe

### telephony

* `hlrLookup` - HLR Lookup
* `phonePlayback` - Phone Playback
* `phoneVerify` - Phone Verify
* `smsVerify` - SMS Verify
* `verifySecurityCode` - Verify Security Code

### www

* `browserBot` - Browser Bot
* `htmlClean` - HTML Clean
* `urlInfo` - URL Info
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage 
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally 
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically. 
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
